# audit-parser

./: Cargo.toml  readme.md
.github/workflows/: release.yml
assets/: audit-parse.1
src/: main.rs  model.rs  parse.rs  types.rs
